--- a/public/register.html
+++ b/public/register.html
@@ -34,7 +34,7 @@
   
         <!-- Repeat Password input -->
         <div class="form-outline mb-4">
-          <input type="password" placeholder="registerRepeatPassword" id="registerRepeatPassword" class="form-control" />
+          <input type="password" placeholder="Repeat Password" id="registerRepeatPassword" class="form-control" />
         </div>
   
         <!-- Checkbox -->
