Add: Live Text Effect

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -13,9 +13,12 @@
     <div class="header">
         <h1>Welcome to Pacific Parking Services</h1>
     </div>
+    <div class="logout">
+      <button type="logout" class="btn btn-info btn-lg" onclick="logout()" id="logout">Logout</button>
+    </div>
     <div class="container">
-        <h2>Parking Slot Details</h2>
-        <table class="table table-bordered" id="bookingTable">
+      <h2 id="typing-effect">Parking Slot Details</h2>
+              <table class="table table-bordered" id="bookingTable">
             <thead>
                 <tr>
                     <th>Slot Number</th>
