Mod: Button types

--- a/public/register.html
+++ b/public/register.html
@@ -48,7 +48,7 @@
   
         <!-- Submit button -->
         <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-        <button type="submit" onclick="backToLogin()" class="btn btn-primary btn-block mb-4">Back to Login</button>
+        <button type="button" onclick="backToLogin()" class="btn btn-primary btn-block mb-4">Back to Login</button>
 
       </form>
     </div>
