--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <label for="rem">Show Password</label>
         <br>
         <button type="submit" id="login-form-submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-               <button type="button"  onclick="test();  registerpage();"  class="btn btn-primary btn-block mb-4">Register</button>
+               <button type="button"  onclick="registerpage()"  class="btn btn-primary btn-block mb-4">Register</button>
 
 
     </div>
