--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,7 +17,7 @@
       <button type="logout" class="btn btn-info btn-lg" onclick="logout()" id="logout">Logout</button>
     </div>
     <div class="container">
-      <h2 id="typing-effect">Parking Slot Details</h2>
+      <h2 id="typing-effect"></h2>
               <table class="table table-bordered" id="bookingTable">
             <thead>
                 <tr>
