Add: New Billable and Welcome voice feature

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,8 @@
             >
               Sign in
             </button>
+            <audio id="welcome-audio" src="../welcome.mp3"></audio>
+
             <button
               type="button"
               onclick="registerpage()"
