Add: Billable Feature

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -32,6 +32,7 @@
                     <th>Start Time</th>
                     <th>End Time</th>
                     <th>Status</th>
+                    <th>Billable Amount</th>
                 </tr>
             </thead>
             <tbody id="bookingTableBody">
@@ -93,7 +94,7 @@
                             <br>
 <br>
                             <label for="Bill">Total Bill</label>
-                            <input type="text" id="Bill" name="bill" readonly>
+                            <input type="text" id="billable" name="bill" readonly>
                             
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
