Fix: Sound alert on success

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -99,7 +99,7 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                 <input type="reset" class="btn btn-default" value="Reset">
-                                <button type="submit" onclick="color(); play();" class="btn btn-default">Submit</button>
+                                <button type="submit" onclick="color()" class="btn btn-default">Submit</button>
                             </div>
                         </form>
                     </div>
